# KY-Agent

./: .env.example  .gitignore  README.md  alembic.ini  codex.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
app/agents/: chat_graph.py  toolkit.py
app/agents/chat/: agent_prompts.py  graph.py  profiles.py  tool_routes.py
app/agents/core/: context_prompts.py  profiles.py
app/agents/graphs/: chat_graph.py  daily_research_graph.py
app/api/: deps.py  main.py
app/api/routes/: agent.py  email.py  reports.py  runtime_config.py  search.py  topics.py  uploads.py  vision.py
app/core/: config.py  logging.py  scheduler.py
app/db/: base.py
app/integrations/mcp/: client.py  local_server.py
app/integrations/sam3/: __init__.py  runner.py  service.py
app/models/: __init__.py  agent_run.py  chunk.py  document.py  paper.py  report.py  topic.py  user.py
app/schemas/: agent.py  email.py  paper.py  report.py  runtime_config.py  search.py  topic.py  upload.py  vision.py
app/workers/: daily_jobs.py
configs/: topics.yaml
docs/: api_for_frontend.md  langchain_refactor_notes.md
frontend/: streamlit_app.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_topic_prompt_hint.py
scripts/: init_db.py  pg_env.sh  pg_psql.sh  pg_start.sh  pg_status.sh  pg_stop.sh  run_daily_report.py
teste/: README.md  _client.py  run_all.py  sample_progress.md  test_agent_sse.py  test_email.py  test_health.py  test_reports.py  test_runtime_config.py  test_sam_vision.py  test_search_chat.py  test_topics.py  test_uploads.py
tests/: test_agent_chat_service.py  test_config.py  test_email_service.py  test_file_extraction.py  test_langchain_vector_store.py  test_report_service.py  test_search_service.py
(+17 files in other folders)
