[project]
name = "ky-research-agent"
version = "0.1.0"
description = "Personal research progress agent with arXiv digest, email reports, uploads, and pgvector RAG."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosmtplib==3.0.2",
    "alembic==1.14.0",
    "apscheduler==3.10.4",
    "arxiv==2.1.3",
    "fastapi==0.115.6",
    "greenlet==3.1.1",
    "jinja2==3.1.4",
    "langchain==0.3.13",
    "langchain-openai==0.2.14",
    "langchain-postgres>=0.0.17",
    "langgraph==0.2.60",
    "markdown==3.7",
    "mcp[cli]==1.27.0",
    "pgvector==0.3.6",
    "psycopg[binary]==3.2.3",
    "pydantic==2.11.3",
    "pydantic-settings==2.8.1",
    "pypdf==5.1.0",
    "python-docx==1.1.2",
    "python-multipart==0.0.19",
    "pyyaml==6.0.2",
    "sqlalchemy==2.0.36",
    "tenacity==9.0.0",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
]
frontend = [
    "requests==2.32.3",
    "streamlit==1.41.1",
]

[project.scripts]
ky-api = "app.api.main:run"
ky-daily-report = "scripts.run_daily_report:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"frontend/streamlit_app.py" = ["E501"]
"migrations/versions/0001_initial.py" = ["E501", "UP007", "UP035"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
